c4prj2_input/grade.txt
Grading at Tue Sep  4 19:18:36 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:4:2: error: invalid preprocessing directive #incdude
 #incdude "deck.h"
  ^
Compilation of input.c failed

Overall Grade: F
